# agent-zero

./: .env.example  .gitignore  AGENTS.md  Dockerfile  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURAL_DESIGN.md  IMPLEMENTATION_GUIDE.md  MASTER_PLAN.md  PROOF_OF_COMPLETION.md  TECHNICAL_SPECIFICATION.md  agent_architecture.md  deployment_plan.md  gemini_updated_guide.md
src/: config.py  main.py
src/agent/: graph.py  nodes.py  prompts.py
src/core/: llm.py  state.py
src/tools/: base.py  filesystem.py  github.py  host.py  media.py  memory.py  planner.py  project.py  resources.py  system.py  web.py
tests/: integration_test.py
